Added sm.getJob() function, cleanup